2012-11-11  Mike Frysinger  <vapier@gentoo.org>

	* config.sub (arm): Handle armv6/armv7/armv8 targets.
	* testsuite/config-sub.data: Add test cases.

2012-10-10  David Holsgrove  <david.holsgrove@xilinx.com>

	* config.sub (microblazeel): New.
	* testsuite/config-sub.data: Add a test case.

2012-09-25  Theo Markettos  <theo@markettos.org.uk>

	* config.guess (arm:*:riscos:*): Allow arm*.
	* testsuite/config-guess.data: Add a test case.

2012-08-18  Anthony G. Basile  <blueness@gentoo.org>

	* config.sub (linux-musl*): New.
	* testsuite/config-sub.data: Add a test case.

2012-08-14  Alex Smith  <alex@alex-smith.me.uk>

	* config.guess (x86_64:Haiku:*:*): New.
	* testsuite/config-guess.data: Add a test case.

2012-07-31  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh: Don't export PATH.

2012-07-31  Earnie Boyd  <earnie@users.sourceforge.net>
	    Ben Elliston  <bje@gnu.org>

	* config.guess (*:MINGW64*:*): New.
	* config.sub (mingw64): Likewise.
	* testsuite/config-guess.data: Add a test case.
	* testsuite/config-sub.data: Likewise.

2012-07-30  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh: Incorporate uname.in as a heredoc.
	* testsuite/uname.in: Remove.

2012-07-29  Ben Elliston  <bje@gnu.org>

	* uname: Remove.

2012-07-29  Ben Elliston  <bje@gnu.org>

	* config.guess: Remove commented code, circa 1994.

2012-06-17  David Hill  <dhill@mindcry.org>

	* config.guess (*:Bitrig:*:*): New.
	* config.sub (-bitrig*): Likewise.
	* testsuite/config-sub.data: Add a test case.

2012-06-10  Dmitriy Fedchenko <xfedch@gmail.com>
	    Ben Elliston  <bje@gnu.org>

	* config.guess (NSE-?:NONSTOP_KERNEL:*:*): Match NSE-* as the
	substring can be longer than one character.
	* testsuite/config-guess.data: Add a new test case.

2012-05-24  Joe Seymour  <jseymour@codesourcery.com>

	* config.sub (hexagon): Set default operating system to elf.
	* testsuite/config-sub.data: Change "hexagon" mapping to
	hexagon-unknown-elf.
